# kitchen-buddy

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  mise.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: b6f6020bfb88_initial.py
backend/app/: main.py
backend/app/api/: __init__.py  collections.py  dashboard.py  favorites.py  images.py  ingredients.py  meal_plans.py  pantry.py  recipes.py  shopping_lists.py  suggestions.py  tags.py
backend/app/core/: __init__.py  config.py  database.py  enums.py
backend/app/models/: __init__.py  collection.py  favorite.py  ingredient.py  meal_plan.py  pantry.py  recipe.py  recipe_note.py  shopping_list.py
backend/app/schemas/: __init__.py  collection.py  dashboard.py  favorite.py  ingredient.py  meal_plan.py  pantry.py  recipe.py  recipe_note.py  shopping_list.py  suggestions.py  tag.py
backend/app/utils/: __init__.py  recipe_import.py  scaling.py
backend/scripts/: import_obsidian_recipes.py
backend/tests/: conftest.py  test_collections.py  test_dashboard.py  test_favorites.py  test_ingredients.py  test_pantry.py  test_recipe_import.py  test_recipe_notes.py  test_recipes.py  test_scaling.py  test_suggestions.py  test_tags.py
src/: app.css
src/lib/constants/: dietary-tags.ts
src/lib/stores/: timers.ts
src/lib/types/: index.ts
src/lib/utils/: api.test.ts  api.ts  date.test.ts  date.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/collections/: +page.svelte
src/routes/collections/[id]/: +page.svelte
src/routes/favorites/: +page.svelte
src/routes/ingredients/: +page.svelte
src/routes/meal-planner/: +page.svelte
src/routes/pantry/: +page.svelte
src/routes/recipes/: +page.svelte
src/routes/recipes/[id]/: +page.svelte
src/routes/recipes/[id]/edit/: +page.svelte
src/routes/recipes/import/: +page.svelte
src/routes/recipes/new/: +page.svelte
src/routes/shopping-lists/: +page.svelte
src/routes/shopping-lists/[id]/: +page.svelte
src/routes/suggestions/: +page.svelte
