[project]
name = "kitchen-buddy-backend"
version = "0.1.0"
description = "Kitchen Buddy API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.32.0",
    "sqlalchemy==2.0.46",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-settings==2.6.1",
    "alembic==1.18.1",
    "python-multipart==0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
