[project]
name = "kitchen-buddy-backend"
version = "0.1.0"
description = "Kitchen Buddy API"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy==2.0.46",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "alembic==1.18.1",
    "python-multipart==0.0.22",
    "httpx==0.28.1",
    "beautifulsoup4==4.14.3",
    "extruct==0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=app", "--cov-report=xml"]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]
